--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -17,10 +17,8 @@
     color: aliceblue;  
 }
 
-#particles {
-  width: 100%;
-  height: 100%;
-  z-index: -10;
+canvas {
+  display: none;
 }
 
 @keyframes blink-caret {
@@ -55,6 +53,12 @@
     left: 46%;
     bottom: 15%;
   }    
+  canvas {
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    display: inline;
+  }
   }
   
 
